[gd_scene load_steps=2 format=3 uid="uid://bdjo7jwxbr2km"]

[ext_resource type="Script" path="res://addons/p2p/lobby/scenes/LobbyItem.gd" id="1_i6dq2"]

[node name="LobbyItem" type="Panel"]
custom_minimum_size = Vector2(250, 60)
anchors_preset = -1
anchor_left = 0.065
anchor_right = 0.065
offset_left = -124.8
offset_right = -124.8
script = ExtResource("1_i6dq2")

[node name="MarginContainer" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(200, 45)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
columns = 2

[node name="Name" type="RichTextLabel" parent="MarginContainer/VBoxContainer/HBoxContainer/GridContainer"]
custom_minimum_size = Vector2(200, 2.08165e-12)
layout_mode = 2
bbcode_enabled = true
text = "[center]Default Lobby Name[/center]"
fit_content = true
scroll_active = false
visible_characters = 25
visible_ratio = 1.38889

[node name="Join" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/GridContainer"]
layout_mode = 2
text = "Join"

[node name="LobbyMode" type="RichTextLabel" parent="MarginContainer/VBoxContainer/HBoxContainer/GridContainer"]
custom_minimum_size = Vector2(2.08165e-12, 22)
layout_mode = 2
bbcode_enabled = true
text = "[center]Public[/center]"
scroll_active = false

[node name="LobbySize" type="RichTextLabel" parent="MarginContainer/VBoxContainer/HBoxContainer/GridContainer"]
custom_minimum_size = Vector2(2.08165e-12, 24)
layout_mode = 2
bbcode_enabled = true
text = "[right]0/1[/right]"
scroll_active = false

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/GridContainer/Join" to="." method="_on_join_pressed"]
